<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.trendingmoviesapp.activity.MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="10dp"
                android:text="@string/name_movie"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:padding="@dimen/padding_layout"
                android:text="@string/plot_synopsis"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plotSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:padding="@dimen/padding_layout"
                android:text="@string/rating"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:padding="@dimen/padding_layout"
                android:text="@string/release"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/originalLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:padding="@dimen/padding_layout"
                android:text="@string/original_language"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/originalLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>